--- a/index.html
+++ b/index.html
@@ -71,7 +71,13 @@
       <div class="boxes movies">
         <h2> Movies </h2>
         <div class="feature feature-1">
-          <abbr title="The Dark Knight - Movie poster"><a href="img/movies/dark-knight.jpg" target="_blank"><img class="picture" src="img/movies/dark-knight.jpg" alt="dark knight picture"></a></abbr>
+          <abbr title="The Dark Knight - Movie poster">
+            <a href="img/movies/dark-knight.jpg" target="_blank">
+              <div class="picture-wrapper">
+                <img class="picture dark-knight-poster" src="img/movies/dark-knight.jpg" alt="dark knight picture">
+              </div>
+            </a>
+          </abbr>
           <h3> The Dark Knight </h3>
           <p><span class="italics">&ldquo;The Dark Knight&rdquo;</span> is a 2008 film directed, produced, and co-written by Christopher Nolan. </p>
           <p> Based on the DC Comics character Batman, the film is the second installment of Nolan's The Dark Knight Trilogy and a sequel to 2005's Batman Begins,
@@ -88,7 +94,15 @@
 
 
         <div class="feature feature-2">
-          <abbr title="Batman & Robin - Movie poster"><a href="img/movies/batman-robin.jpg" target="_blank"><img class="picture" src="img/movies/batman-robin.jpg" alt="batman and robin picture"></a></abbr>
+          <abbr title="Batman & Robin - Movie poster">
+            <a href="img/movies/batman-robin.jpg" target="_blank">
+              <div class="picture-wrapper">
+                <div class="batman-robin-wrapper">
+                  <img class="picture batman-robin-poster" src="img/movies/batman-robin.jpg" alt="batman and robin picture">
+                </div>
+              </div>
+            </a>
+          </abbr>
           <h3> Batman &amp; Robin </h3>
           <p> <span class="italics">&ldquo;Batman & Robin&rdquo;</span> is a 1997 American superhero film based on the DC Comics characters Batman and Robin. It is the fourth and final installment of Warner Bros.' initial Batman film series, a sequel
             to Batman
@@ -98,7 +112,8 @@
             Pat Hingle, and Elle Macpherson. </p>
           <p> The film follows the titular characters as they attempt to prevent Mr. Freeze and Poison Ivy from taking over the world, while at the same time struggling to keep their partnership together. It is also to date the only live-action film
             appearance of Batgirl, portrayed by Silverstone, who helps the titular characters fight the villains. </p>
-          <div class="button-wrapper"><abbr title="Click to open link in new tab">
+          <div class="button-wrapper">
+            <abbr title="Click to open link in new tab">
               <a href="https://www.imdb.com/title/tt0118688/" class="read-more read-more-2" target="_blank" rel="noopener noreferrer">Read more on IMDb</a>
             </abbr>
           </div>
@@ -108,16 +123,17 @@
           <abbr title="Batman Returns - Movie poster">
             <a href="img/movies/batman-returns.jpeg" target="_blank">
               <div class="picture-wrapper">
-                <img class="picture batman-returns-poster" src="img/movies/batman-returns.jpeg" alt="batman returns picture"></a>
+                <img class="picture batman-returns-poster" src="img/movies/batman-returns.jpeg" alt="batman returns picture">
               </div>
+            </a>
           </abbr>
           <h3> Batman Returns </h3>
           <p><span class="italics">&ldquo;Batman Returns&rdquo;</span> is a 1992 American superhero film directed by Tim Burton and produced by Denise Di Novi and Burton, based on the DC Comics character Batman. </p>
           <p>The sequel to the 1989 film Batman, it is the second installment of Warner Bros. initial Batman film series, and stars Michael Keaton as Batman, alongside Danny DeVito, Michelle Pfeiffer, Christopher Walken, Michael Gough, Pat Hingle and
             Michael Murphy. </p>
-          <p>In the film, Batman must prevent the Penguin from killing all of Gotham City's firstborn sons, while dealing with Catwoman, who seeks vengeance against Max Shreck, a corrupt tycoon who seeks to bring Gotham City under his control.
-          </p>
-          <div class="button-wrapper"><abbr title="Click to open link in new tab">
+          <p>In the film, Batman must prevent the Penguin from killing all of Gotham City's firstborn sons, while dealing with Catwoman, who seeks vengeance against Max Shreck, a corrupt tycoon who seeks to bring Gotham City under his control.</p>
+          <div class="button-wrapper">
+            <abbr title="Click to open link in new tab">
               <a href="https://www.imdb.com/title/tt0103776/" class="read-more read-more-3" target="_blank" rel="noopener noreferrer">Read more on IMDb</a>
             </abbr>
           </div>
@@ -142,7 +158,9 @@
       <div class="boxes actors">
         <h2>Actors</h2>
         <div class="feature feature-1">
-          <a href="img/actors/christian-bale.jpg" target="_blank"><img class="picture" src="img/actors/christian-bale.jpg" alt="Christian Bale picture"></a>
+          <abbr title="Christian Bale Picture"><a href="img/actors/christian-bale.jpg" target="_blank">
+              <img class="picture" src="img/actors/christian-bale.jpg" alt="Christian Bale picture">
+            </a></abbr>
           <h3> Christian Bale </h3>
           <p>Christian Charles Philip Bale (born 30 January 1974) is an English actor who is known for his intense method acting style, often transforming his body drastically for his roles. </p>
           <p>Bale is the recipient of many awards, including an Academy Award and two Golden Globes, and was featured in the Time 100 list of 2011.
@@ -157,7 +175,9 @@
 
 
         <div class="feature feature-2">
-          <a href="img/actors/michael-keaton.jpg" target="_blank"><img class="picture" src="img/actors/michael-keaton.jpg" alt="Michael Keaton picture"></a>
+          <abbr title="Michael Keaton Picture"><a href="img/actors/michael-keaton.jpg" target="_blank">
+              <img class="picture" src="img/actors/michael-keaton.jpg" alt="Michael Keaton picture">
+            </a></abbr>
           <h3> Michael Keaton </h3>
           <p>Michael John Douglas (born September 5, 1951), known professionally as Michael Keaton, is an American actor. He first rose to fame for his roles on the CBS sitcoms All's Fair and The Mary Tyler Moore Hour and his comedic film roles in
             Night Shift (1982), Mr. Mom (1983), Johnny Dangerously (1984), and Beetlejuice (1988). </p>
@@ -172,7 +192,11 @@
         </div>
 
         <div class="feature feature-3">
-          <a href="img/actors/val-kilmer.jpg" target="_blank"><img class="picture" src="img/actors/val-kilmer.jpg" alt="Val Kilmer picture"></a>
+          <abbr title="Val Kilmer Picture">
+            <a href="img/actors/val-kilmer.jpg" target="_blank">
+              <img class="picture" src="img/actors/val-kilmer.jpg" alt="Val Kilmer picture">
+            </a>
+          </abbr>
           <h3> Val Kilmer </h3>
           <p>Val Edward Kilmer (born December 31, 1959) is an American actor, musician and artist. </p>
           <p>Originally a stage actor, Kilmer became popular in the mid-1980s after a string of appearances in comedy films, starting with Top Secret! (1984) and
