link hover, active, visited

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
   </section>
 
   <!--
-  ███    ███  ██████  ██    ██ ██ ███████ ███████
-  ████  ████ ██    ██ ██    ██ ██ ██      ██
-  ██ ████ ██ ██    ██ ██    ██ ██ █████   ███████
-  ██  ██  ██ ██    ██  ██  ██  ██ ██           ██
-  ██      ██  ██████    ████   ██ ███████ ███████
--->
+    ███    ███  ██████  ██    ██ ██ ███████ ███████
+    ████  ████ ██    ██ ██    ██ ██ ██      ██
+    ██ ████ ██ ██    ██ ██    ██ ██ █████   ███████
+    ██  ██  ██ ██    ██  ██  ██  ██ ██           ██
+    ██      ██  ██████    ████   ██ ███████ ███████
+  -->
 
   <main>
     <section id="movies">
@@ -72,7 +72,7 @@
         <h2> Movies </h2>
         <div class="feature feature-1">
           <abbr title="The Dark Knight - Movie poster">
-            <a href="img/movies/dark-knight.jpg" target="_blank">
+            <a href="img/movies/dark-knight.jpg">
               <div class="picture-wrapper">
                 <img class="picture dark-knight-poster" src="img/movies/dark-knight.jpg" alt="dark knight picture">
               </div>
@@ -95,7 +95,7 @@
 
         <div class="feature feature-2">
           <abbr title="Batman & Robin - Movie poster">
-            <a href="img/movies/batman-robin.jpg" target="_blank">
+            <a href="img/movies/batman-robin.jpg">
               <div class="picture-wrapper">
                 <div class="batman-robin-wrapper">
                   <img class="picture batman-robin-poster" src="img/movies/batman-robin.jpg" alt="batman and robin picture">
@@ -121,7 +121,7 @@
 
         <div class="feature feature-3">
           <abbr title="Batman Returns - Movie poster">
-            <a href="img/movies/batman-returns.jpeg" target="_blank">
+            <a href="img/movies/batman-returns.jpeg">
               <div class="picture-wrapper">
                 <img class="picture batman-returns-poster" src="img/movies/batman-returns.jpeg" alt="batman returns picture">
               </div>
@@ -143,12 +143,12 @@
 
 
     <!--
- █████   ██████ ████████  ██████  ██████  ███████
-██   ██ ██         ██    ██    ██ ██   ██ ██
-███████ ██         ██    ██    ██ ██████  ███████
-██   ██ ██         ██    ██    ██ ██   ██      ██
-██   ██  ██████    ██     ██████  ██   ██ ███████
--->
+                █████   ██████ ████████  ██████  ██████  ███████
+                ██   ██ ██         ██    ██    ██ ██   ██ ██
+                ███████ ██         ██    ██    ██ ██████  ███████
+                ██   ██ ██         ██    ██    ██ ██   ██      ██
+                ██   ██  ██████    ██     ██████  ██   ██ ███████
+              -->
 
 
     <section id="actors">
@@ -158,7 +158,7 @@
       <div class="boxes actors">
         <h2>Actors</h2>
         <div class="feature feature-1">
-          <abbr title="Christian Bale Picture"><a href="img/actors/christian-bale.jpg" target="_blank">
+          <abbr title="Christian Bale Picture"><a href="img/actors/christian-bale.jpg">
               <img class="picture" src="img/actors/christian-bale.jpg" alt="Christian Bale picture">
             </a></abbr>
           <h3> Christian Bale </h3>
@@ -175,7 +175,7 @@
 
 
         <div class="feature feature-2">
-          <abbr title="Michael Keaton Picture"><a href="img/actors/michael-keaton.jpg" target="_blank">
+          <abbr title="Michael Keaton Picture"><a href="img/actors/michael-keaton.jpg">
               <img class="picture" src="img/actors/michael-keaton.jpg" alt="Michael Keaton picture">
             </a></abbr>
           <h3> Michael Keaton </h3>
@@ -193,7 +193,7 @@
 
         <div class="feature feature-3">
           <abbr title="Val Kilmer Picture">
-            <a href="img/actors/val-kilmer.jpg" target="_blank">
+            <a href="img/actors/val-kilmer.jpg">
               <img class="picture" src="img/actors/val-kilmer.jpg" alt="Val Kilmer picture">
             </a>
           </abbr>
@@ -213,12 +213,12 @@
     </section>
 
     <!--
- ██████   █████  ██      ██      ███████ ██████  ██    ██
-██       ██   ██ ██      ██      ██      ██   ██  ██  ██
-██   ███ ███████ ██      ██      █████   ██████    ████
-██    ██ ██   ██ ██      ██      ██      ██   ██    ██
- ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
--->
+                        ██████   █████  ██      ██      ███████ ██████  ██    ██
+                        ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
+                        ██   ███ ███████ ██      ██      █████   ██████    ████
+                        ██    ██ ██   ██ ██      ██      ██      ██   ██    ██
+                        ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
+                      -->
 
 
     <section id="gallery">
@@ -283,12 +283,12 @@
   </main>
 
   <!--
-  ███████  ██████   ██████  ████████ ███████ ██████
-  ██      ██    ██ ██    ██    ██    ██      ██   ██
-  █████   ██    ██ ██    ██    ██    █████   ██████
-  ██      ██    ██ ██    ██    ██    ██      ██   ██
-  ██       ██████   ██████     ██    ███████ ██   ██
-  -->
+                            ███████  ██████   ██████  ████████ ███████ ██████
+                            ██      ██    ██ ██    ██    ██    ██      ██   ██
+                            █████   ██    ██ ██    ██    ██    █████   ██████
+                            ██      ██    ██ ██    ██    ██    ██      ██   ██
+                            ██       ██████   ██████     ██    ███████ ██   ██
+                          -->
 
   <footer id="footer">
     <div class="footer-wrapper">
@@ -340,13 +340,28 @@
                 </a>
               </li>
             </ul>
-            <a href="https://github.com/batman-project" class="copyright" target="_blank">
+            <a href="https://github.com/verona-hub" class="copyright" target="_blank">
               <p>&cap; verona &cap;</p>
             </a>
           </div>
         </div>
       </div>
     </div>
+
+            <!--
+                            ███████  ██████   ██████  ████████ ███████ ██████
+                            ██      ██    ██ ██    ██    ██    ██      ██   ██
+                            █████   ██    ██ ██    ██    ██    █████   ██████
+                            ██      ██    ██ ██    ██    ██    ██      ██   ██
+                            ██       ██████   ██████     ██    ███████ ██   ██
+                          -->
+            <!--
+                          ███    ███  ██████  ██████  ██ ██      ███████
+                          ████  ████ ██    ██ ██   ██ ██ ██      ██
+                          ██ ████ ██ ██    ██ ██████  ██ ██      █████
+                          ██  ██  ██ ██    ██ ██   ██ ██ ██      ██
+                          ██      ██  ██████  ██████  ██ ███████ ███████
+                        -->
 
     <div class="footer-mobile-wrapper">
       <div class="mobile-followb-wrapper">
@@ -371,14 +386,14 @@
       </ul>
 
       <div class="mobile-copyright">
-        <a href="https://github.com/batman-project" class="mobile-a-copyright" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/verona-hub" class="mobile-a-copyright" target="_blank" rel="noopener noreferrer">
           <p>&cap; verona &cap;</p>
         </a>
       </div>
 
     </div>
-  </footer>
 
+  </footer>
 </body>
 
 </html>
