h2 new font, desktop social logo new font

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
   <meta property="og:image" content="img/batman-hero.jpg" />
   <meta property="og:type" content="website" />
 
+  <!--     Stylesheets      -->
   <link rel="stylesheet" href="style.css" type="text/css">
   <link rel="stylesheet" href="desktop.css" type="text/css">
   <link rel="stylesheet" href="tablet-and-mobile.css" type="text/css">
   <link rel="stylesheet" href="tablet.css" type="text/css">
   <link rel="stylesheet" href="mobile.css" type="text/css">
 
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;700&family=Cormorant:wght@400;500;700&family=Raleway:wght@400;500;700&family=Oswald&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;700&family=Cormorant:wght@400;500;700&family=Raleway:wght@400;500;700&family=Oswald&family=Lato:wght@300;400;700&family=Fredericka+the+Great&display=swap" rel="stylesheet">
 
   <title> Batman Fanpage </title>
   <link rel="icon" type="text/png" href="img/favicon.png">
@@ -365,7 +366,7 @@
 
     <div class="footer-mobile-wrapper">
       <div class="mobile-followb-wrapper">
-        <h4> follow Batman </h4>
+        <h4 class="follow-b"> follow Batman </h4>
       </div>
 
       <ul class="mobile-social-ul">
