new footer mobile-tablet, hovers to desktop

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Fanpage about Batman movies and actors">
 
@@ -20,7 +21,8 @@
   <link rel="stylesheet" href="tablet.css" type="text/css">
   <link rel="stylesheet" href="mobile.css" type="text/css">
 
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;700&family=Cormorant:wght@400;500;700&family=Raleway:wght@400;500;700&family=Oswald&family=Lato:wght@300;400;700&family=Fredericka+the+Great&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;700&family=Cormorant:wght@400;500;700&family=Raleway:wght@400;500;700&family=Oswald&family=Lato:wght@300;400;700&family=Fredericka+the+Great&display=swap"
+    rel="stylesheet">
 
   <title> Batman Fanpage </title>
   <link rel="icon" type="text/png" href="img/favicon.png">
@@ -259,22 +261,22 @@
         <div class="mobile-container">
 
           <div class="mobile-box">
-            <a href="img/gallery/batman-action.jpg" target="_blank"><img src="img/gallery/batman-action.jpg" alt="batman in action" class="box-image">
+            <a href="img/gallery/batman-action.jpg"><img src="img/gallery/batman-action.jpg" alt="batman in action" class="box-image">
               <span> The </span></a>
           </div>
 
           <div class="mobile-box">
-            <a href="img/gallery/batman-flying.jpg" target="_blank"><img src="img/gallery/batman-flying.jpg" alt="flying batman" class="box-image">
+            <a href="img/gallery/batman-flying.jpg"><img src="img/gallery/batman-flying.jpg" alt="flying batman" class="box-image">
               <span> Hero </span></a>
           </div>
 
           <div class="mobile-box">
-            <a href="img/gallery/batman-hero.jpg" target="_blank"><img src="img/gallery/batman-hero.jpg" alt="batman hero pose" class="box-image">
+            <a href="img/gallery/batman-hero.jpg"><img src="img/gallery/batman-hero.jpg" alt="batman hero pose" class="box-image">
               <span> We </span></a>
           </div>
 
           <div class="mobile-box">
-            <a href="img/gallery/batman-bats.jpg" target="_blank"><img src="img/gallery/batman-bats.jpg" alt="batman with bats" class="box-image">
+            <a href="img/gallery/batman-bats.jpg"><img src="img/gallery/batman-bats.jpg" alt="batman with bats" class="box-image">
               <span> Deserve </span></a>
           </div>
         </div>
@@ -284,12 +286,12 @@
   </main>
 
   <!--
-                            ███████  ██████   ██████  ████████ ███████ ██████
-                            ██      ██    ██ ██    ██    ██    ██      ██   ██
-                            █████   ██    ██ ██    ██    ██    █████   ██████
-                            ██      ██    ██ ██    ██    ██    ██      ██   ██
-                            ██       ██████   ██████     ██    ███████ ██   ██
-                          -->
+  ███████  ██████   ██████  ████████ ███████ ██████
+  ██      ██    ██ ██    ██    ██    ██      ██   ██
+  █████   ██    ██ ██    ██    ██    █████   ██████
+  ██      ██    ██ ██    ██    ██    ██      ██   ██
+  ██       ██████   ██████     ██    ███████ ██   ██
+ -->
 
   <footer id="footer">
     <div class="footer-wrapper">
@@ -349,24 +351,24 @@
       </div>
     </div>
 
-            <!--
-                            ███████  ██████   ██████  ████████ ███████ ██████
-                            ██      ██    ██ ██    ██    ██    ██      ██   ██
-                            █████   ██    ██ ██    ██    ██    █████   ██████
-                            ██      ██    ██ ██    ██    ██    ██      ██   ██
-                            ██       ██████   ██████     ██    ███████ ██   ██
-                          -->
-            <!--
-                          ███    ███  ██████  ██████  ██ ██      ███████
-                          ████  ████ ██    ██ ██   ██ ██ ██      ██
-                          ██ ████ ██ ██    ██ ██████  ██ ██      █████
-                          ██  ██  ██ ██    ██ ██   ██ ██ ██      ██
-                          ██      ██  ██████  ██████  ██ ███████ ███████
-                        -->
+    <!--
+███████  ██████   ██████  ████████ ███████ ██████
+██      ██    ██ ██    ██    ██    ██      ██   ██
+█████   ██    ██ ██    ██    ██    █████   ██████
+██      ██    ██ ██    ██    ██    ██      ██   ██
+██       ██████   ██████     ██    ███████ ██   ██
+-->
+    <!--
+███    ███  ██████  ██████  ██ ██      ███████
+████  ████ ██    ██ ██   ██ ██ ██      ██
+██ ████ ██ ██    ██ ██████  ██ ██      █████
+██  ██  ██ ██    ██ ██   ██ ██ ██      ██
+██      ██  ██████  ██████  ██ ███████ ███████
+-->
 
     <div class="footer-mobile-wrapper">
       <div class="mobile-followb-wrapper">
-        <h4 class="follow-b"> follow Batman </h4>
+        <h4 class="follow-b"> follow <br>Batman </h4>
       </div>
 
       <ul class="mobile-social-ul">
