new actors-picturres, footer middle image, removed box border

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
       <div class="footer-address">
         <div class="address-logo"></div>
-        <a href="img/map.jpg" class="address-map" target="_blank">
+        <a href="img/map.jpg" class="address-map">
           <div class="address-map"></div>
         </a>
         <div class="text-wrapper">
