--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         <div class="hero-to-movies"></div>
       </div>
       <div class="boxes movies">
-        <h2> Movies </h2>
+        <div class="h2-wrapper">
+          <h2> Movies </h2>
+        </div>
         <div class="feature feature-1">
           <abbr title="The Dark Knight - Movie poster">
             <a href="img/movies/dark-knight.jpg">
@@ -159,7 +161,9 @@
         <div class="movies-to-actors"></div>
       </div>
       <div class="boxes actors">
-        <h2>Actors</h2>
+        <div class="h2-wrapper">
+          <h2>Actors</h2>
+        </div>
         <div class="feature feature-1">
           <abbr title="Christian Bale Picture"><a href="img/actors/christian-bale.jpg">
               <img class="picture" src="img/actors/christian-bale.jpg" alt="Christian Bale picture">
@@ -230,7 +234,9 @@
       </div>
 
       <div class="gallery-boxes">
-        <h2> Gallery </h2>
+        <div class="h2-wrapper h2-gallery-wrapper">
+          <h2> Gallery </h2>
+        </div>
         <div class="container">
           <div class="box">
             <img src="img/gallery/batman-action.jpg" alt="batman in action" class="box-image">
