--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="hero-to-movies"></div>
       </div>
       <div class="boxes movies">
-        <div class="h2-wrapper">
+        <div class="h2-wrapper h2-movies-actors-wrapper">
           <h2> Movies </h2>
         </div>
         <div class="feature feature-1">
@@ -161,7 +161,7 @@
         <div class="movies-to-actors"></div>
       </div>
       <div class="boxes actors">
-        <div class="h2-wrapper">
+        <div class="h2-wrapper h2-movies-actors-wrapper">
           <h2>Actors</h2>
         </div>
         <div class="feature feature-1">
@@ -263,7 +263,9 @@
       </div>
 
       <div class="mobile-gallery">
-        <h2> Gallery </h2>
+        <div class="h2-wrapper h2-gallery-wrapper">
+          <h2> Gallery </h2>
+        </div>
         <div class="mobile-container">
 
           <div class="mobile-box">
