mobile and tabled adaptation

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="h2-wrapper h2-movies-actors-wrapper">
           <h2> Movies </h2>
         </div>
-        <div class="feature feature-1">
+        <div class="feature">
           <abbr title="The Dark Knight - Movie poster">
             <a href="img/movies/dark-knight.jpg">
               <div class="picture-wrapper">
@@ -84,7 +84,7 @@
             </a>
           </abbr>
           <h3> The Dark Knight </h3>
-          <p><span class="italics">&ldquo;The Dark Knight&rdquo;</span> is a 2008 film directed, produced, and co-written by Christopher Nolan. </p>
+          <p class="test"><span class="italics">&ldquo;The Dark Knight&rdquo;</span> is a 2008 film directed, produced, and co-written by Christopher Nolan. </p>
           <p> Based on the DC Comics character Batman, the film is the second installment of Nolan's The Dark Knight Trilogy and a sequel to 2005's Batman Begins,
             starring Christian Bale and supported by Michael Caine, Heath Ledger, Gary Oldman, Aaron Eckhart, Maggie Gyllenhaal, and Morgan Freeman. </p>
 
@@ -98,7 +98,7 @@
         </div>
 
 
-        <div class="feature feature-2">
+        <div class="feature">
           <abbr title="Batman & Robin - Movie poster">
             <a href="img/movies/batman-robin.jpg">
               <div class="picture-wrapper">
@@ -124,7 +124,7 @@
           </div>
         </div>
 
-        <div class="feature feature-3">
+        <div class="feature">
           <abbr title="Batman Returns - Movie poster">
             <a href="img/movies/batman-returns.jpeg">
               <div class="picture-wrapper">
@@ -164,9 +164,9 @@
         <div class="h2-wrapper h2-movies-actors-wrapper">
           <h2>Actors</h2>
         </div>
-        <div class="feature feature-1">
+        <div class="feature">
           <abbr title="Christian Bale Picture"><a href="img/actors/christian-bale.jpg">
-              <img class="picture" src="img/actors/christian-bale.jpg" alt="Christian Bale picture">
+              <img class="picture bale-picture" src="img/actors/christian-bale.jpg" alt="Christian Bale picture">
             </a></abbr>
           <h3> Christian Bale </h3>
           <p>Christian Charles Philip Bale (born 30 January 1974) is an English actor who is known for his intense method acting style, often transforming his body drastically for his roles. </p>
@@ -181,7 +181,7 @@
         </div>
 
 
-        <div class="feature feature-2">
+        <div class="feature">
           <abbr title="Michael Keaton Picture"><a href="img/actors/michael-keaton.jpg">
               <img class="picture" src="img/actors/michael-keaton.jpg" alt="Michael Keaton picture">
             </a></abbr>
@@ -198,7 +198,7 @@
           </div>
         </div>
 
-        <div class="feature feature-3">
+        <div class="feature">
           <abbr title="Val Kilmer Picture">
             <a href="img/actors/val-kilmer.jpg">
               <img class="picture" src="img/actors/val-kilmer.jpg" alt="Val Kilmer picture">
@@ -268,24 +268,32 @@
         </div>
         <div class="mobile-container">
 
-          <div class="mobile-box">
-            <a href="img/gallery/batman-action.jpg"><img src="img/gallery/batman-action.jpg" alt="batman in action" class="box-image">
-              <span> The </span></a>
+          <div class="mobile-box-wrapper">
+            <div class="mobile-box">
+              <a href="img/gallery/batman-action.jpg"><img src="img/gallery/batman-action.jpg" alt="batman in action" class="box-image">
+                <span> The </span></a>
+            </div>
           </div>
 
-          <div class="mobile-box">
-            <a href="img/gallery/batman-flying.jpg"><img src="img/gallery/batman-flying.jpg" alt="flying batman" class="box-image">
-              <span> Hero </span></a>
+          <div class="mobile-box-wrapper">
+            <div class="mobile-box">
+              <a href="img/gallery/batman-flying.jpg"><img src="img/gallery/batman-flying.jpg" alt="flying batman" class="box-image">
+                <span> Hero </span></a>
+            </div>
           </div>
 
-          <div class="mobile-box">
-            <a href="img/gallery/batman-hero.jpg"><img src="img/gallery/batman-hero.jpg" alt="batman hero pose" class="box-image">
-              <span> We </span></a>
+          <div class="mobile-box-wrapper">
+            <div class="mobile-box">
+              <a href="img/gallery/batman-hero.jpg"><img src="img/gallery/batman-hero.jpg" alt="batman hero pose" class="box-image">
+                <span> We </span></a>
+            </div>
           </div>
 
-          <div class="mobile-box">
-            <a href="img/gallery/batman-bats.jpg"><img src="img/gallery/batman-bats.jpg" alt="batman with bats" class="box-image">
-              <span> Deserve </span></a>
+          <div class="mobile-box-wrapper">
+            <div class="mobile-box">
+              <a href="img/gallery/batman-bats.jpg"><img src="img/gallery/batman-bats.jpg" alt="batman with bats" class="box-image">
+                <span> Deserve </span></a>
+            </div>
           </div>
         </div>
       </div>
