--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="h2-wrapper h2-movies-actors-wrapper">
           <h2> Movies </h2>
         </div>
-        <div class="feature">
+        <div class="feature feature-1">
           <abbr title="The Dark Knight - Movie poster">
             <a href="img/movies/dark-knight.jpg">
               <div class="picture-wrapper">
@@ -164,7 +164,7 @@
         <div class="h2-wrapper h2-movies-actors-wrapper">
           <h2>Actors</h2>
         </div>
-        <div class="feature">
+        <div class="feature  feature-1">
           <abbr title="Christian Bale Picture"><a href="img/actors/christian-bale.jpg">
               <img class="picture bale-picture" src="img/actors/christian-bale.jpg" alt="Christian Bale picture">
             </a></abbr>
@@ -384,7 +384,7 @@
 
     <div class="footer-mobile-wrapper">
       <div class="mobile-followb-wrapper">
-        <h4 class="follow-b"> follow <br>Batman </h4>
+        <h4 class="follow-b"> follow Batman </h4>
       </div>
 
       <ul class="mobile-social-ul">
