new mobile-footer with flexbox

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         <li><a href="#movies"> Movies </a></li>
         <li><a href="#actors"> Actors </a></li>
         <li><a href="#gallery"> Gallery </a></li>
-        <li class="batcave"><a href="#footer"> Batcave </a></li>
+        <li id="batcave"><a href="#footer"> Batcave </a></li>
+        <li class="contact"><a href="#contact"> Contact </a></li>
+
 
       </ul>
     </nav>
@@ -381,35 +383,36 @@
 ██  ██  ██ ██    ██ ██   ██ ██ ██      ██
 ██      ██  ██████  ██████  ██ ███████ ███████
 -->
+    <div id="contact">
+      <div class="footer-mobile-wrapper">
+        <div class="mobile-followb-wrapper">
+          <h4 class="follow-b"> follow Batman </h4>
+        </div>
 
-    <div class="footer-mobile-wrapper">
-      <div class="mobile-followb-wrapper">
-        <h4 class="follow-b"> follow Batman </h4>
+        <ul class="mobile-social-ul">
+          <li class="mobile-social-list">
+            <a href="https://www.facebook.com/batman/" class="mobile-a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/mobile-facebook.svg" alt="facebook logo" class="mobile-social-logo facebook">
+            </a>
+          </li>
+
+          <li class="mobile-social-list">
+            <a href="https://twitter.com/dcbatman" class="mobile-a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/mobile-twitter.svg" alt="twitter logo" class="mobile-social-logo twitter">
+            </a>
+          </li>
+
+          <li class="mobile-social-list">
+            <a href="https://www.instagram.com/batman/" class="mobile-a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/mobile-instagram.svg" alt="instagram logo" class="mobile-social-logo instagram">
+            </a>
+          </li>
+        </ul>
+
+        <div class="mobile-copyright">
+          <a href="https://github.com/verona-hub" class="mobile-a-copyright" target="_blank" rel="noopener noreferrer">
+            <p>&cap; verona &cap;</p>
+          </a>
+        </div>
+
       </div>
-
-      <ul class="mobile-social-ul">
-        <li class="mobile-social-list">
-          <a href="https://www.facebook.com/batman/" class="mobile-a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/mobile-facebook.svg" alt="facebook logo" class="mobile-social-logo facebook">
-          </a>
-        </li>
-
-        <li class="mobile-social-list">
-          <a href="https://twitter.com/dcbatman" class="mobile-a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/mobile-twitter.svg" alt="twitter logo" class="mobile-social-logo twitter">
-          </a>
-        </li>
-
-        <li class="mobile-social-list">
-          <a href="https://www.instagram.com/batman/" class="mobile-a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/mobile-instagram.svg" alt="instagram logo" class="mobile-social-logo instagram">
-          </a>
-        </li>
-      </ul>
-
-      <div class="mobile-copyright">
-        <a href="https://github.com/verona-hub" class="mobile-a-copyright" target="_blank" rel="noopener noreferrer">
-          <p>&cap; verona &cap;</p>
-        </a>
-      </div>
-
     </div>
 
   </footer>
