--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section id="hero">
 
     <video id="bat-video" autoplay muted loop>
-      <source src="img/long-cut-80-1366w.mp4//" type="video/mp4">
+      <source src="img/long-cut-maxbit28-2-original.mp4//" type="video/mp4">
     </video>
 
     <div id="hero-text">
@@ -86,14 +86,14 @@
             </a>
           </abbr>
           <h3> The Dark Knight </h3>
-          <p class="test"><span class="italics">&ldquo;The Dark Knight&rdquo;</span> is a 2008 film directed, produced, and co-written by Christopher Nolan. </p>
+          <p><span class="italics">&ldquo;The Dark Knight&rdquo;</span> is a 2008 film directed, produced, and co-written by Christopher Nolan. </p>
           <p> Based on the DC Comics character Batman, the film is the second installment of Nolan's The Dark Knight Trilogy and a sequel to 2005's Batman Begins,
             starring Christian Bale and supported by Michael Caine, Heath Ledger, Gary Oldman, Aaron Eckhart, Maggie Gyllenhaal, and Morgan Freeman. </p>
 
           <p>In the film, Bruce Wayne, Police Lieutenant James Gordon and District Attorney Harvey Dent form an alliance to dismantle organized crime in Gotham City, but are menaced by an anarchistic mastermind known as the Joker, who seeks to
             undermine Batman's influence and turn the city to chaos.</p>
           <div class="button-wrapper">
-            <abbr title="Click to open link in new tab">
+            <abbr title="Click to open link in a new tab">
               <a href="https://www.imdb.com/title/tt0468569/" class="read-more read-more-1" target="_blank" rel="noopener noreferrer">Read more on IMDb</a>
             </abbr>
           </div>
@@ -120,7 +120,7 @@
           <p> The film follows the titular characters as they attempt to prevent Mr. Freeze and Poison Ivy from taking over the world, while at the same time struggling to keep their partnership together. It is also to date the only live-action film
             appearance of Batgirl, portrayed by Silverstone, who helps the titular characters fight the villains. </p>
           <div class="button-wrapper">
-            <abbr title="Click to open link in new tab">
+            <abbr title="Click to open link in a new tab">
               <a href="https://www.imdb.com/title/tt0118688/" class="read-more read-more-2" target="_blank" rel="noopener noreferrer">Read more on IMDb</a>
             </abbr>
           </div>
@@ -140,7 +140,7 @@
             Michael Murphy. </p>
           <p>In the film, Batman must prevent the Penguin from killing all of Gotham City's firstborn sons, while dealing with Catwoman, who seeks vengeance against Max Shreck, a corrupt tycoon who seeks to bring Gotham City under his control.</p>
           <div class="button-wrapper">
-            <abbr title="Click to open link in new tab">
+            <abbr title="Click to open link in a new tab">
               <a href="https://www.imdb.com/title/tt0103776/" class="read-more read-more-3" target="_blank" rel="noopener noreferrer">Read more on IMDb</a>
             </abbr>
           </div>
@@ -176,7 +176,7 @@
             Bale's personal life and personality have been the subject of much public attention, despite his desire to keep a low profile. </p>
           <p>He is a supporter of Sea Shepherd Conservation Society, Greenpeace, and the World Wildlife Fund, and obtained American citizenship in 2014. Bale has been married to Sandra Bla&zcaron;i&cacute; since 2000; they have two children.</p>
           <div class="button-wrapper">
-            <abbr title="Click to open link in new tab">
+            <abbr title="Click to open link in a new tab">
               <a href="https://en.wikipedia.org/wiki/Christian_Bale" class="source source-1" target="_blank" rel="noopener noreferrer">source: Wikipedia</a>
             </abbr>
           </div>
@@ -194,7 +194,7 @@
             a Golden Globe Award for Best Actor – Motion Picture Musical or Comedy and receiving a nomination for the Academy Award for Best Actor. </p>
           <p>He previously received a Golden Globe Award nomination for his performance in Live from Baghdad (2002) and a Screen Actors Guild Award nomination for The Company (2007). Keaton was awarded a Career Achievement Award from the Hollywood
             Film Festival.</p>
-          <div class="button-wrapper"><abbr title="Click to open link in new tab">
+          <div class="button-wrapper"><abbr title="Click to open link in a new tab">
               <a href="https://en.wikipedia.org/wiki/Michael_Keaton" class="source source-2" target="_blank" rel="noopener noreferrer">source: Wikipedia</a>
             </abbr>
           </div>
@@ -213,7 +213,7 @@
           <p>Some of his other notable film roles include Jim Morrison in The Doors (1991), an apparition of Elvis Presley in True Romance (1993), Doc Holliday in Tombstone (1993), Chris Shiherlis in Heat (1995), Bruce Wayne / Batman in Batman
             Forever (1995), Simon Templar in The Saint (1997), Moses in The Prince of Egypt (1998), "Gay Perry" in Kiss Kiss Bang Bang (2005), and Dieter Von Cunth in MacGruber (2010).</p>
           <div class="button-wrapper">
-            <abbr title="Click to open link in new tab">
+            <abbr title="Click to open link in a new tab">
               <a href="https://en.wikipedia.org/wiki/Val_Kilmer" class="source source-3" target="_blank" rel="noopener noreferrer">source: Wikipedia</a>
             </abbr>
           </div>
@@ -347,23 +347,23 @@
             <h4 class="follow-b"> follow Batman </h4>
             <ul class="social-ul">
               <li class="social-list">
-                <a href="https://www.facebook.com/batman/" class="a-text" target="_blank"><img src="img/logo/logo-facebook.svg" alt="facebook logo" class="social-logo facebook">
-                </a>
+                <abbr title="Click to open link in a new tab"><a href="https://www.facebook.com/batman/" class="a-text" target="_blank"><img src="img/logo/logo-facebook.svg" alt="facebook logo" class="social-logo facebook">
+                  </a></abbr>
               </li>
 
               <li class="social-list">
-                <a href="https://twitter.com/dcbatman" class="a-text" target="_blank"><img src="img/logo/logo-twitter.svg" alt="twitter logo" class="social-logo twitter">
-                </a>
+                <abbr title="Click to open link in a new tab"><a href="https://twitter.com/dcbatman" class="a-text" target="_blank"><img src="img/logo/logo-twitter.svg" alt="twitter logo" class="social-logo twitter">
+                  </a></abbr>
               </li>
 
               <li class="social-list">
-                <a href="https://www.instagram.com/batman/" class="a-text" target="_blank"><img src="img/logo/logo-instagram.svg" alt="instagram logo" class="social-logo instagram">
-                </a>
+                <abbr title="Click to open link in a new tab"><a href="https://www.instagram.com/batman/" class="a-text" target="_blank"><img src="img/logo/logo-instagram.svg" alt="instagram logo" class="social-logo instagram">
+                  </a></abbr>
               </li>
             </ul>
-            <a href="https://github.com/verona-hub" class="copyright" target="_blank">
-              <p>&cap; verona &cap;</p>
-            </a>
+            <abbr title="Click to open link in a new tab"><a href="https://github.com/verona-hub" class="copyright" target="_blank">
+                <p>&cap; verona &cap;</p>
+              </a></abbr>
           </div>
         </div>
       </div>
@@ -391,25 +391,35 @@
 
         <ul class="mobile-social-ul">
           <li class="mobile-social-list">
-            <a href="https://www.facebook.com/batman/" class="mobile-a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/mobile-facebook.svg" alt="facebook logo" class="mobile-social-logo facebook">
-            </a>
+            <abbr title="Click to open link in a new tab">
+              <a href="https://www.facebook.com/batman/" class="mobile-a-text" target="_blank" rel="noopener noreferrer">
+                <img src="img/logo/mobile-facebook.svg" alt="facebook logo" class="mobile-social-logo facebook">
+              </a>
+            </abbr>
           </li>
 
           <li class="mobile-social-list">
-            <a href="https://twitter.com/dcbatman" class="mobile-a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/mobile-twitter.svg" alt="twitter logo" class="mobile-social-logo twitter">
-            </a>
+            <abbr title="Click to open link in a new tab">
+              <a href="https://twitter.com/dcbatman" class="mobile-a-text" target="_blank" rel="noopener noreferrer">
+                <img src="img/logo/mobile-twitter.svg" alt="twitter logo" class="mobile-social-logo twitter">
+              </a>
+            </abbr>
           </li>
 
           <li class="mobile-social-list">
-            <a href="https://www.instagram.com/batman/" class="mobile-a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/mobile-instagram.svg" alt="instagram logo" class="mobile-social-logo instagram">
-            </a>
+            <abbr title="Click to open link in a new tab">
+              <a href="https://www.instagram.com/batman/" class="mobile-a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/mobile-instagram.svg" alt="instagram logo" class="mobile-social-logo instagram">
+              </a>
+            </abbr>
           </li>
         </ul>
 
         <div class="mobile-copyright">
-          <a href="https://github.com/verona-hub" class="mobile-a-copyright" target="_blank" rel="noopener noreferrer">
-            <p>&cap; verona &cap;</p>
-          </a>
+          <abbr title="Click to open link in a new tab">
+            <a href="https://github.com/verona-hub" class="mobile-a-copyright" target="_blank" rel="noopener noreferrer">
+              <p>&cap; verona &cap;</p>
+            </a>
+          </abbr>
         </div>
 
       </div>
