--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section id="hero">
 
     <video id="bat-video" autoplay muted loop>
-      <source src="img/long-cut-maxbit28-2-original.mp4//" type="video/mp4">
+      <source src="img/hero-video.mp4" type="video/mp4">
     </video>
 
     <div id="hero-text">
