--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </nav>
   </header>
 
-  <section id="hero">
+  <section id="hero" oncontextmenu="return false;">
 
-    <video id="bat-video" autoplay muted loop>
+    <video id="bat-video" autoplay muted loop controls controlsList="nodownload">
       <source src="img/hero-video.mp4" type="video/mp4">
     </video>
 
