--- a/index.html
+++ b/index.html
@@ -42,15 +42,13 @@
         <li><a href="#gallery"> Gallery </a></li>
         <li id="batcave"><a href="#footer"> Batcave </a></li>
         <li class="contact"><a href="#contact"> Contact </a></li>
-
-
       </ul>
     </nav>
   </header>
 
-  <section id="hero" oncontextmenu="return false;">
+  <section id="hero">
 
-    <video id="bat-video" autoplay muted loop controls controlsList="nodownload">
+    <video id="bat-video" autoplay muted loop controls controlsList="nodownload" oncontextmenu="return false;">
       <source src="img/hero-video.mp4" type="video/mp4">
     </video>
 
