--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
   <section id="hero">
 
-    <video id="bat-video" autoplay muted loop controls controlsList="nodownload" oncontextmenu="return false;">
-      <source src="img/hero-video.mp4" type="video/mp4">
+    <video id="bat-video" autoplay muted loop controls oncontextmenu="return false;">
+      <source src="img/hero-video.mp4//" type="video/mp4">
     </video>
 
     <div id="hero-text">
@@ -77,11 +77,11 @@
         </div>
         <div class="feature feature-1">
           <abbr title="The Dark Knight - Movie poster">
-            <a href="img/movies/dark-knight.jpg">
-              <div class="picture-wrapper">
+            <div class="picture-wrapper">
+              <a href="img/movies/dark-knight.jpg">
                 <img class="picture dark-knight-poster" src="img/movies/dark-knight.jpg" alt="dark knight picture">
-              </div>
-            </a>
+              </a>
+            </div>
           </abbr>
           <h3> The Dark Knight </h3>
           <p><span class="italics">&ldquo;The Dark Knight&rdquo;</span> is a 2008 film directed, produced, and co-written by Christopher Nolan. </p>
@@ -100,13 +100,13 @@
 
         <div class="feature">
           <abbr title="Batman & Robin - Movie poster">
-            <a href="img/movies/batman-robin.jpg">
-              <div class="picture-wrapper">
+            <div class="picture-wrapper">
+              <a href="img/movies/batman-robin.jpg">
                 <div class="batman-robin-wrapper">
                   <img class="picture batman-robin-poster" src="img/movies/batman-robin.jpg" alt="batman and robin picture">
                 </div>
-              </div>
-            </a>
+              </a>
+            </div>
           </abbr>
           <h3> Batman &amp; Robin </h3>
           <p> <span class="italics">&ldquo;Batman & Robin&rdquo;</span> is a 1997 American superhero film based on the DC Comics characters Batman and Robin. It is the fourth and final installment of Warner Bros.' initial Batman film series, a sequel
@@ -126,11 +126,11 @@
 
         <div class="feature">
           <abbr title="Batman Returns - Movie poster">
-            <a href="img/movies/batman-returns.jpeg">
-              <div class="picture-wrapper">
+            <div class="picture-wrapper">
+              <a href="img/movies/batman-returns.jpeg">
                 <img class="picture batman-returns-poster" src="img/movies/batman-returns.jpeg" alt="batman returns picture">
-              </div>
-            </a>
+              </a>
+            </div>
           </abbr>
           <h3> Batman Returns </h3>
           <p><span class="italics">&ldquo;Batman Returns&rdquo;</span> is a 1992 American superhero film directed by Tim Burton and produced by Denise Di Novi and Burton, based on the DC Comics character Batman. </p>
@@ -345,21 +345,22 @@
             <h4 class="follow-b"> follow Batman </h4>
             <ul class="social-ul">
               <li class="social-list">
-                <abbr title="Click to open link in a new tab"><a href="https://www.facebook.com/batman/" class="a-text" target="_blank"><img src="img/logo/logo-facebook.svg" alt="facebook logo" class="social-logo facebook">
+                <abbr title="Click to open link in a new tab"><a href="https://www.facebook.com/batman/" class="a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/logo-facebook.svg" alt="facebook logo" class="social-logo facebook">
                   </a></abbr>
               </li>
 
               <li class="social-list">
-                <abbr title="Click to open link in a new tab"><a href="https://twitter.com/dcbatman" class="a-text" target="_blank"><img src="img/logo/logo-twitter.svg" alt="twitter logo" class="social-logo twitter">
+                <abbr title="Click to open link in a new tab"><a href="https://twitter.com/dcbatman" class="a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/logo-twitter.svg" alt="twitter logo" class="social-logo twitter">
                   </a></abbr>
               </li>
 
               <li class="social-list">
-                <abbr title="Click to open link in a new tab"><a href="https://www.instagram.com/batman/" class="a-text" target="_blank"><img src="img/logo/logo-instagram.svg" alt="instagram logo" class="social-logo instagram">
+                <abbr title="Click to open link in a new tab"><a href="https://www.instagram.com/batman/" class="a-text" target="_blank" rel="noopener noreferrer"><img src="img/logo/logo-instagram.svg" alt="instagram logo"
+                      class="social-logo instagram">
                   </a></abbr>
               </li>
             </ul>
-            <abbr title="Click to open link in a new tab"><a href="https://github.com/verona-hub" class="copyright" target="_blank">
+            <abbr title="Click to open link in a new tab"><a href="https://github.com/verona-hub" class="copyright" target="_blank" rel="noopener noreferrer">
                 <p>&cap; verona &cap;</p>
               </a></abbr>
           </div>
