--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="tablet.css" type="text/css">
   <link rel="stylesheet" href="tablet-and-mobile.css" type="text/css">
 
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;700&family=Cormorant:wght@400;500;700&family=Raleway:wght@400;500;700&family=Oswald&family=Lato:wght@300;400;700&family=Fredericka+the+Great&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;700&family=Cormorant:wght@400;500;700&family=Raleway:wght@400;500;700&family=Lato:wght@300;400;700&family=Fredericka+the+Great&display=swap"
     rel="stylesheet">
 
   <title> Batman Fanpage </title>
