--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
   <link rel="stylesheet" href="tablet.css" type="text/css">
   <link rel="stylesheet" href="tablet-and-mobile.css" type="text/css">
 
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;700&family=Cormorant:wght@400;500;700&family=Raleway:wght@400;500;700&family=Lato:wght@300;400;700&family=Fredericka+the+Great&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;700&family=Cormorant:wght@400;500;700&family=Raleway:wght@400;500;700&family=Lato:wght@300;400;700&family=Fredericka+the+Great&display=swap" rel="stylesheet">
 
   <title> Batman Fanpage </title>
   <link rel="icon" type="text/png" href="img/favicon.png">
@@ -76,13 +75,13 @@
           <h2> Movies </h2>
         </div>
         <div class="feature feature-1">
-          <abbr title="The Dark Knight - Movie poster">
-            <div class="picture-wrapper">
+          <div class="picture-wrapper">
+            <abbr title="The Dark Knight - Movie poster">
               <a href="img/movies/dark-knight.jpg">
                 <img class="picture dark-knight-poster" src="img/movies/dark-knight.jpg" alt="dark knight picture">
               </a>
-            </div>
-          </abbr>
+            </abbr>
+          </div>
           <h3> The Dark Knight </h3>
           <p><span class="italics">&ldquo;The Dark Knight&rdquo;</span> is a 2008 film directed, produced, and co-written by Christopher Nolan. </p>
           <p> Based on the DC Comics character Batman, the film is the second installment of Nolan's The Dark Knight Trilogy and a sequel to 2005's Batman Begins,
@@ -99,15 +98,15 @@
 
 
         <div class="feature">
-          <abbr title="Batman & Robin - Movie poster">
-            <div class="picture-wrapper">
+          <div class="picture-wrapper">
+            <abbr title="Batman & Robin - Movie poster">
               <a href="img/movies/batman-robin.jpg">
                 <div class="batman-robin-wrapper">
                   <img class="picture batman-robin-poster" src="img/movies/batman-robin.jpg" alt="batman and robin picture">
                 </div>
               </a>
-            </div>
-          </abbr>
+            </abbr>
+          </div>
           <h3> Batman &amp; Robin </h3>
           <p> <span class="italics">&ldquo;Batman & Robin&rdquo;</span> is a 1997 American superhero film based on the DC Comics characters Batman and Robin. It is the fourth and final installment of Warner Bros.' initial Batman film series, a sequel
             to Batman
@@ -125,13 +124,13 @@
         </div>
 
         <div class="feature">
-          <abbr title="Batman Returns - Movie poster">
-            <div class="picture-wrapper">
+          <div class="picture-wrapper">
+            <abbr title="Batman Returns - Movie poster">
               <a href="img/movies/batman-returns.jpeg">
                 <img class="picture batman-returns-poster" src="img/movies/batman-returns.jpeg" alt="batman returns picture">
               </a>
-            </div>
-          </abbr>
+            </abbr>
+          </div>
           <h3> Batman Returns </h3>
           <p><span class="italics">&ldquo;Batman Returns&rdquo;</span> is a 1992 American superhero film directed by Tim Burton and produced by Denise Di Novi and Burton, based on the DC Comics character Batman. </p>
           <p>The sequel to the 1989 film Batman, it is the second installment of Warner Bros. initial Batman film series, and stars Michael Keaton as Batman, alongside Danny DeVito, Michelle Pfeiffer, Christopher Walken, Michael Gough, Pat Hingle and
@@ -360,9 +359,11 @@
                   </a></abbr>
               </li>
             </ul>
-            <abbr title="Click to open link in a new tab"><a href="https://github.com/verona-hub" class="copyright" target="_blank" rel="noopener noreferrer">
-                <p>&cap; verona &cap;</p>
-              </a></abbr>
+            <abbr title="Click to open link in a new tab">
+              <a href="https://github.com/verona-hub" class="copyright" target="_blank" rel="noopener noreferrer">
+                &cap; verona &cap;
+              </a>
+            </abbr>
           </div>
         </div>
       </div>
@@ -416,7 +417,7 @@
         <div class="mobile-copyright">
           <abbr title="Click to open link in a new tab">
             <a href="https://github.com/verona-hub" class="mobile-a-copyright" target="_blank" rel="noopener noreferrer">
-              <p>&cap; verona &cap;</p>
+              &cap; verona &cap;
             </a>
           </abbr>
         </div>
