--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <section id="hero">
 
     <video id="bat-video" autoplay muted loop controls oncontextmenu="return false;">
-      <source src="img/hero-video.mp4//" type="video/mp4">
+      <source src="img/hero-video.mp4" type="video/mp4">
     </video>
 
     <div id="hero-text">
